--- a/Inception/srcs/WordPress/Dockerfile
+++ b/Inception/srcs/WordPress/Dockerfile
@@ -7,3 +7,4 @@ RUN	apk update && \
 	sed -i "s|listen = 127.0.0.1:9000|listen = 9000|g" /etc/php81/php-fpm.d/www.conf && \
     sed -i "s|;listen.owner = nobody|listen.owner = nobody|g" /etc/php81/php-fpm.d/www.conf && \
     sed -i "s|;listen.group = nobody|listen.group = nobody|g" /etc/php81/php-fpm.d/www.conf
+COPY ripasso.html /var/www/html/wordpress/ripasso.html
