--- a/Inception/srcs/.env
+++ b/Inception/srcs/.env
@@ -1,16 +1,16 @@
 #---------- DataBase ----------
-WP_DB=wordpress
+WP_DB=wordpress_database
 
 #---------- MariaDB ----------
-WP_DB_PASS=wordpress
-WP_DB_USR=wordpress
+WP_DB_PASS=wordpress_mariadb_p
+WP_DB_USR=wordpress_mariadb_u
 
 #---------- WordPress Admin ----------
-WP_USR_A=wordpress
-WP_PAS_A=wordpress
-WP_EMAIL_A=wordpress@wordpress.wordpress
+WP_USR_A=wordpress_wpa_u
+WP_PAS_A=wordpress_wpa_p
+WP_EMAIL_A=wordpress1@gmail.it
 
 #---------- WordPress User ----------
-WP_USR=wordpress2
-WP_PAS=wordpress2
-WP_EMAIL=wordpress2@wordpress2.wordpress2
+WP_USR=wordpress_wpu_u
+WP_PAS=wordpress_wpu_p
+WP_EMAIL_A=wordpress2@gmail.it
