testergit add . git push
;

--- a/Inception/srcs/.env
+++ b/Inception/srcs/.env
@@ -1,16 +1,17 @@
 #---------- DataBase ----------
-WP_DB=wordpress_database
+WP_DB=wpdb
+HOST_DB=mariadb
 
 #---------- MariaDB ----------
-WP_DB_PASS=wordpress_mariadb_p
-WP_DB_USR=wordpress_mariadb_u
+WP_DB_PASS=wpmariadb
+WP_DB_USR=wpmariadb
 
 #---------- WordPress Admin ----------
-WP_USR_A=wordpress_wpa_u
-WP_PAS_A=wordpress_wpa_p
-WP_EMAIL_A=wordpress1@gmail.it
+WP_USR_A=wpmariadba
+WP_PAS_A=wpmariadba
+WP_EMAIL_A=wpmariadba@gmail.it
 
 #---------- WordPress User ----------
-WP_USR=wordpress_wpu_u
-WP_PAS=wordpress_wpu_p
-WP_EMAIL_A=wordpress2@gmail.it
+WP_USR=wpmariadbu
+WP_PAS=wpmariadbu
+WP_EMAIL=wpmariadbu@gmail.it
