--- a/C++ - Module 09/ex02/Makefile
+++ b/C++ - Module 09/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/06/03 21:04:52 by aanghi           ###   ########.fr        #
+#    Updated: 2024/06/04 18:20:25 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -36,4 +36,11 @@ test: re
 	rm -f $(OBJ)
 	clear
 	-./$(NAME)
+	@echo
+	-./$(NAME) 54 54
+	@echo
+	-./$(NAME) ""
+	@echo
+	-./$(NAME) `shuf -i 1-100000 -n 3000 | tr "\n" " "`
+	@echo
 	@rm -f $(NAME)
