--- a/C++ - Module 09/ex02/Makefile
+++ b/C++ - Module 09/ex02/Makefile
@@ -6,12 +6,12 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/06/04 18:20:25 by aanghi           ###   ########.fr        #
+#    Updated: 2024/06/05 21:21:08 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = PmergeMe
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g
 
 SRC = main.cpp PmergeMe.cpp
 OBJ = $(SRC:.cpp=.o)
@@ -32,6 +32,9 @@ re: fclean all
 %.o: %.cpp
 	c++ $(CFLAGS) -c $< -o $@
 
+ARG5=$$(shuf -i 1-100 -n 5 | tr "\n" " ")
+ARG10=$$(shuf -i 1-100 -n 10 | tr "\n" " ")
+ARG3000=$$(shuf -i 1-100000 -n 3000 | tr "\n" " ")
 test: re
 	rm -f $(OBJ)
 	clear
@@ -39,8 +42,23 @@ test: re
 	@echo
 	-./$(NAME) 54 54
 	@echo
+	-./$(NAME) "-43"
+	@echo
+	-./$(NAME) "voglio mangiare il tuo pancreas"
+	@echo
 	-./$(NAME) ""
 	@echo
-	-./$(NAME) `shuf -i 1-100000 -n 3000 | tr "\n" " "`
+	-./$(NAME) "$(ARG5)"
 	@echo
+	-./$(NAME) "$(ARG10)"
+	@echo
+	-./$(NAME) "$(ARG3000)"
+	@echo
+	@rm -f $(NAME)
+
+ARGS=$$(shuf -i 1-100 -n 15 | tr "\n" " ")
+test2: re
+	rm -f $(OBJ)
+	clear
+	-./$(NAME) "$(ARGS)"
 	@rm -f $(NAME)
