--- a/C++ - Module 09/ex02/Makefile
+++ b/C++ - Module 09/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/06/07 14:18:26 by aanghi           ###   ########.fr        #
+#    Updated: 2024/06/07 15:48:23 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -59,8 +59,8 @@ test: re
 
 # ARGS=1 2 3 4 5 6 7 8 9 10 11 12 13 14 15
 # ARGS=7 5 2 11 9 12 4 6 8 10 13 3 14 1 15
- ARGS=6 7 8 5 3 1 2 4
-# ARGS=$$(shuf -i 1-9 -n 8 | tr "\n" " ")
+# ARGS=6 7 8 5 3 1 2 4
+ARGS=$$(shuf -i 1-9 -n 9 | tr "\n" " ")
 test2: re
 	rm -f $(OBJ)
 	clear
