--- a/webserv/Makefile
+++ b/webserv/Makefile
@@ -6,7 +6,7 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/06/04 15:24:36 by aanghi           ###   ########.fr        #
+#    Updated: 2024/06/24 11:55:19 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,10 +37,13 @@ test: re
 	clear
 	@echo Senza parametri
 	-./$(NAME)
+	@echo
 	@echo Piu parametri
 	-./$(NAME) piu parametri
+	@echo
 	@echo File inesistente
 	-./$(NAME) no_exsist.conf
+	@echo
 	@echo File vuoto
 	-./$(NAME) conf/error1.conf
 	@echo
