voglio mangiare il tuo pancreas

--- a/webserv/Makefile
+++ b/webserv/Makefile
@@ -6,7 +6,7 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/06/24 11:55:19 by aanghi           ###   ########.fr        #
+#    Updated: 2024/06/24 17:26:25 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,16 +35,20 @@ re: fclean all
 test: re
 	rm -f $(OBJ)
 	clear
-	@echo Senza parametri
-	-./$(NAME)
-	@echo
-	@echo Piu parametri
+	@echo "=====> Casi in cui non deve funzionare <====="
 	-./$(NAME) piu parametri
 	@echo
-	@echo File inesistente
 	-./$(NAME) no_exsist.conf
 	@echo
-	@echo File vuoto
 	-./$(NAME) conf/error1.conf
+	@echo
+	-./$(NAME) conf/error2.conf
+	@echo
+	-./$(NAME) conf/error3.conf
+	@echo
+	@echo "=====> Casi in cui deve funzionare <====="
+	-./$(NAME)
+	@echo
+	-./$(NAME) conf/conf1.conf
 	@echo
 	@rm -f $(NAME)
