--- a/webserv/conf/error2.conf
+++ b/webserv/conf/error2.conf
@@ -1,7 +1,8 @@
 {
+	}
     host=0.0.0.0
     port=9001
-    server_name=voglio mangiare il tuo pancreas
+    server_name=default server
     error_page=./pages/error.html
     body_size=9000
 }
@@ -9,7 +10,7 @@
 {
     host=0.0.0.0
     port=9002
-    server_name=voglio mangiare il tuo pancreas2
+    server_name=default server
     error_page=./pages/error.html
     body_size=9000
 }
