--- a/webserv/conf/conf1.conf
+++ b/webserv/conf/conf1.conf
@@ -1,15 +1,19 @@
+
+
 {
     host=0.0.0.0
     port=9001
-    server_name=default server
+    server_name=voglio mangiare il tuo pancreas
     error_page=./pages/error.html
     body_size=9000
 }
 
+
+
 {
     host=0.0.0.0
     port=9002
-    server_name=default server
+    server_name=voglio mangiare il tuo pancreas2
     error_page=./pages/error.html
     body_size=9000
 }
