--- a/C++ - Module 09/ex00/Makefile
+++ b/C++ - Module 09/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/06/24 13:44:03 by aanghi           ###   ########.fr        #
+#    Updated: 2024/06/25 11:36:19 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -1667,6 +1667,11 @@ test: re
 	2012-01-11  -11\n\
 	2012-01-11 -11\n\
 	2012-01-11-11\n\
+	2012-01 | 11\n\
+	 | 11\n\
+	2012-  -11 | 11\n\
+	2012-12-11 | voglio mangiare il tuo pancreass\n\
+	voglio mangiare il tuo pancreass | 11\n\
 	2012-01-11 | 2147483648" > input.txt
 	echo "date | value\n\
 	2005-02-02 | 0.1\n\
