--- a/webserv/conf/conf1.conf
+++ b/webserv/conf/conf1.conf
@@ -5,6 +5,7 @@
     port=9001
     server_name=voglio mangiare il tuo pancreas
     body_size=9000
+	medallow=GET-POST
 }
 
 
@@ -14,6 +15,7 @@
     port=9002
     server_name=voglio mangiare il tuo pancreas2
     body_size=9000
+	medallow=GET-POST
 }
 
 
