--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -5,11 +5,15 @@
     body_size=9000
 	error404=./site/404.html
 	error418=./site/418.html
-	med-allow=GET-POST
+	medallow=GET-POST
+	redict=/ripasso https://ripasso.ddns.net/
+	index=home.html
+	showdir=no
+	root=./site/
 }
 {
     host=0.0.0.0
     port=9002
-    server_name=voglio mangiare il tuo pancreas2
     body_size=9000
+	medallow=GET-POST
 }
