--- a/webserv/conf/default.conf
+++ b/webserv/conf/default.conf
@@ -3,6 +3,7 @@
     port=9001
     server_name=default server
     body_size=9000
+	medallow=GET-POST
 }
 
 {
@@ -10,4 +11,5 @@
     port=9002
     server_name=default server
     body_size=9000
+	medallow=GET-POST
 }
