--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -5,15 +5,16 @@
     body_size=9000
 	error404=./site/404.html
 	error418=./site/418.html
-	medallow=GET-POST
+	medallow=GET-POST-DELETE
 	redict=/ripasso https://ripasso.ddns.net/
 	index=home.html
 	showdir=no
 	root=./site/
+	root_assets=./site/Assets/img/
 }
 {
     host=0.0.0.0
     port=9002
     body_size=9000
-	medallow=GET-POST
+	medallow=GET-POST-DELETE
 }
