voglio mangiare il tuo pancreas

--- a/webserv/marshal/Makefile
+++ b/webserv/marshal/Makefile
@@ -6,14 +6,14 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/06/27 09:31:57 by aanghi           ###   ########.fr        #
+#    Updated: 2024/06/27 09:32:45 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = webserv
 CFLAGS = -Wall -Wextra -Werror -std=c++98 -g
 
-SRC = main.cpp marshal/marshal.cpp webserv.cpp
+SRC = main.cpp marshal.cpp ../webserv.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
@@ -35,5 +35,61 @@ re: fclean all
 test: re
 	rm -f $(OBJ)
 	clear
+	@echo "=====> Casi in cui non deve funzionare <====="
+	-./$(NAME) piu parametri
+	@echo
+	-./$(NAME) no_exsist.conf
+	@echo
+	-./$(NAME) conf/error1.conf
+	@echo
+	-./$(NAME) conf/error2.conf
+	@echo
+	-./$(NAME) conf/error3.conf
+	@echo
+	-./$(NAME) conf/error4.conf
+	@echo
+	-./$(NAME) conf/error5.conf
+	@echo
+	-./$(NAME) conf/error6.conf
+	@echo
+	-./$(NAME) conf/error7.conf
+	@echo
+	-./$(NAME) conf/error8.conf
+	@echo
+	-./$(NAME) conf/error9.conf
+	@echo
+	-./$(NAME) conf/error10.conf
+	@echo
+	-./$(NAME) conf/error11.conf
+	@echo
+	-./$(NAME) conf/error12.conf
+	@echo
+	-./$(NAME) conf/error13.conf
+	@echo
+	-./$(NAME) conf/error14.conf
+	@echo
+	-./$(NAME) conf/error15.conf
+	@echo
+	-./$(NAME) conf/error16.conf
+	@echo
+	-./$(NAME) conf/error17.conf
+	@echo
+	-./$(NAME) conf/error18.conf
+	@echo
+	@echo "=====> Casi in cui deve funzionare <====="
+	-./$(NAME)
+	@echo
 	-./$(NAME) conf/conffull.conf
+	@echo
+	-./$(NAME) conf/conf1.conf
+	@echo
+	-./$(NAME) conf/conf2.conf
+	@echo
+	@rm -f $(NAME)
+
+test2: re
+	rm -f $(OBJ)
+	clear
+	-valgrind ./$(NAME) conf/error7.conf
+	@echo
 	@rm -f $(NAME)
