--- a/webserv/marshal/conf/error13.conf
+++ b/webserv/marshal/conf/error13.conf
@@ -1,5 +1,7 @@
 {
     host=0.0.0.0
     port=9001
-    server_name=default server
     body_size=9000
+	medallow=GET-POST
+	ridirect=/ripasso /ddns /net
+}
