voglio mangiare il tuo pancreas

--- a/webserv/Makefile
+++ b/webserv/Makefile
@@ -6,12 +6,12 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/07/05 12:40:06 by aanghi           ###   ########.fr        #
+#    Updated: 2024/07/08 16:47:46 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = webserv
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -g
+CFLAGS = #-Wall -Wextra -Werror -std=c++98 -g
 
 SRC = main.cpp marshal/marshal.cpp webserv.cpp execute.cpp
 OBJ = $(SRC:.cpp=.o)
