--- a/webserv/conf/simpconf.conf
+++ b/webserv/conf/simpconf.conf
@@ -8,7 +8,7 @@
 	medallow=GET-POST-DELETE
 	ridirect=/ripasso https://ripasso.ddns.net/
 	index=home.html
-	showdir=no
+	showdir=yes
 	root=./site/
 	root_assets=./site/Assets/img/
 }
