--- a/webserv/conf/simpconf.conf
+++ b/webserv/conf/simpconf.conf
@@ -4,7 +4,9 @@
     server_name=voglio mangiare il tuo pancreas
     body_size=9001
 	error404=./site/404.html
+	error404=./site/405.html
 	error418=./site/418.html
+	error413=./site/413.html
 	medallow=GET-POST-DELETE
 	ridirect=/ripasso https://ripasso.ddns.net/
 	index=home.html
