--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -2,11 +2,11 @@
     host=0.0.0.0
     port=9001
     server_name=voglio mangiare il tuo pancreas
-    body_size=9000
+    body_size=2147483646
 	error404=./site/404.html
-	error404=./site/405.html
-	error418=./site/418.html
+	error405=./site/405.html
 	error413=./site/413.html
+	error418=./site/418.html
 	medallow=GET-POST-DELETE
 	ridirect=/ripasso https://ripasso.ddns.net/
 	index=home.html
