--- a/webserv/conf/simpconf.conf
+++ b/webserv/conf/simpconf.conf
@@ -7,6 +7,7 @@
 	error405=./site/405.html
 	error413=./site/413.html
 	error418=./site/418.html
+	error500=./site/500.html
 	medallow=GET-POST-DELETE
 	ridirect=/ripasso https://ripasso.ddns.net/
 	index=home.html
