voglio mangiare il tuo pancreas

--- a/webserv/conf/default.conf
+++ b/webserv/conf/default.conf
@@ -1,7 +1,7 @@
 {
     host=0.0.0.0
     port=9001
-    server_name=default server
+    server_name=defaultserver
     body_size=9000
 	medallow=GET-POST
 }
@@ -9,7 +9,7 @@
 {
     host=0.0.0.0
     port=9002
-    server_name=default server
+    server_name=defaultserver
     body_size=9000
 	medallow=GET-POST
 }
