--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -1,7 +1,7 @@
 {
     host=0.0.0.0
     port=9001
-    server_name=voglio mangiare il tuo pancreas
+    server_name=vogliomangiareiltuopancreas
     body_size=2147483646
 	error404=./site/404.html
 	error405=./site/405.html
