--- a/webserv/marshal/conf/conf2.conf
+++ b/webserv/marshal/conf/conf2.conf
@@ -1,14 +1,14 @@
 {
 host=0.0.0.0
 port=9001
-server_name=voglio mangiare il tuo pancreas
+server_name=vogliomangiareiltuopancreas
 body_size=9000
 medallow=GET-POST-DELETE
 }
 {
 host=0.0.0.0
 port=9002
-server_name=voglio mangiare il tuo pancreas2
+server_name=vogliomangiareiltuopancreas2
 body_size=9000
 medallow=GET-POST-DELETE
 }
