--- a/webserv/marshal/conf/error35.conf
+++ b/webserv/marshal/conf/error35.conf
@@ -1,12 +1,14 @@
 {
     host=0.0.0.0
-    port=9000
+	port=600
+    server_name=9000
     body_size=900
 	medallow=GET-POST-DELETE
 }
 {
     host=0.0.0.0
-    port=9000
+	port=700
+    server_name=9000
     body_size=900
 	medallow=GET-POST-DELETE
 }
