--- a/webserv/marshal/conf/conf1.conf
+++ b/webserv/marshal/conf/conf1.conf
@@ -1,20 +1,20 @@
 
 
 {
-    host=0.0.0.0
-    port=9001
-    server_name=voglio mangiare il tuo pancreas
-    body_size=9000
+	host=0.0.0.0
+	port=9001
+	server_name=vogliomangiareiltuopancreas
+	body_size=9000
 	medallow=GET-POST-DELETE
 }
 
 
 
 {
-    host=0.0.0.0
-    port=9002
-    server_name=voglio mangiare il tuo pancreas2
-    body_size=9000
+	host=0.0.0.0
+	port=9002
+	server_name=vogliomangiareiltuopancreas2
+	body_size=9000
 	medallow=GET-POST-DELETE
 }
 
