--- a/webserv/marshal/conf/error36.conf
+++ b/webserv/marshal/conf/error36.conf
@@ -1,7 +1,7 @@
 {
-    server_name: voglio mangiare il tuo pancreas
     host=0.0.0.0
     port=9000
     body_size=900
 	medallow=GET-POST-DELETE
+    server_name=voglio mangiare il tuo pancreas
 }
