--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -44,3 +44,10 @@
     body_size=9000
 	medallow=GET-POST-DELETE
 }
+{
+    host=0.0.0.0
+    port=9002
+    body_size=9000
+	medallow=GET-POST-DELETE
+	root=/nfs/homes/aanghi/Desktop/42RomaLuis/webserv/site/
+}
