--- a/webserv/conf/default.conf
+++ b/webserv/conf/default.conf
@@ -4,6 +4,7 @@
     server_name=defaultserver
     body_size=9000
 	medallow=GET-POST
+    index=index.html
 }
 
 {
@@ -12,4 +13,5 @@
     server_name=defaultserver2
     body_size=9000
 	medallow=GET-POST
+    index=index.html
 }
