--- a/webserv/marshal/conf/error14.conf
+++ b/webserv/marshal/conf/error14.conf
@@ -2,5 +2,11 @@
     host=0.0.0.0
     port=9001
     body_size=9000
-	medallow=GET-POST-hola
+}
+
+{
+    host=0.0.0.0
+    port=9001
+    body_size=9000
+	medallow=GET-POST-voglio mangiare il tuo pancreas
 }
