--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -17,6 +17,10 @@
 	gci=.php /usr/bin/php-cgi
 	gci=.py /usr/bin/python3
 	gci=.sh /bin/bash
+	location=/ripasso_loc {
+		ridirect=/ripasso https://ripasso.ddns.net/utenti/esercizi/home.php
+		showdir=yes
+	}
 }
 {
     host=0.0.0.0
