--- a/webserv/marshal/conf/error10.conf
+++ b/webserv/marshal/conf/error10.conf
@@ -2,6 +2,5 @@
     host=0.0.0.0
     port=9001
     body_size=9000
-	medallow=GET-POST
-	bho=bho
+    anime_preferito=voglio mangiare il tuo pancreas
 }
