--- a/webserv/marshal/conf/error32.conf
+++ b/webserv/marshal/conf/error32.conf
@@ -1,7 +1,5 @@
 {
     host=0.0.0.0
-    port=9000
+    port=9999999999
     body_size=9000
-	medallow=GET-POST-DELETE
-    error418=inesistente.html
 }
