--- a/webserv/marshal/conf/default.conf
+++ b/webserv/marshal/conf/default.conf
@@ -4,12 +4,14 @@
     server_name=defaultserver
     body_size=9000
 	medallow=GET-POST
+    index=index.html
 }
 
 {
     host=0.0.0.0
     port=9002
-    server_name=defaultserver
+    server_name=defaultserver2
     body_size=9000
 	medallow=GET-POST
+    index=index.html
 }
