voglio mangiare il tuo pancreas

--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -17,7 +17,7 @@
 	gci=.py /usr/bin/python3
 	gci=.sh /bin/bash
 	location=/ripasso_loc {
-		ridirect=/ripasso https://ripasso.ddns.net/utenti/esercizi/home.php
+		ridirect=/ripasso https://andreianghi.ddns.net
 		showdir=yes
 	}
 }
