voglio mangiare il tuo pancreas

--- a/webserv/conf/tester.conf
+++ b/webserv/conf/tester.conf
@@ -6,16 +6,14 @@
 	medallow=GET
 	index=index.html
 	root=/nfs/homes/aanghi/Desktop/42RomaLuis/webserv/YoupiBanane/
-
 	location=/post_body {
 		medallow=POST
 		body_size=100
 	}
-
 	location=/directory {
 		medallow=GET-POST
 		root=/nfs/homes/aanghi/Desktop/42RomaLuis/webserv/YoupiBanane/
 		index=youpi.bad_extension
-		cgi=.bla cgi_tester
+		gci=.bla cgi_tester
 	}
 }
