--- a/webserv/conf/conffull.conf
+++ b/webserv/conf/conffull.conf
@@ -14,9 +14,9 @@
 	showdir=no
 	root=/nfs/homes/aanghi/Desktop/42RomaLuis/webserv/site/
 	gci=.php /usr/bin/php-cgi
-	gci=.py /usr/bin/python3
 	gci=.sh /bin/bash
 	location=/ripasso_loc {
+		root=/nfs/homes/aanghi/Desktop/42RomaLuis/webserv/site/
 		ridirect=/ripasso https://andreianghi.ddns.net
 		showdir=yes
 	}
